---
source: tests/formatter.rs
expression: formatter.into_output()
---
set BASE_URL env("hi")

let t = {
    value: 23,
    love: "you",
    hello: {
        world: true,
        test: {
            ing: "true",
            wow: {
                b: 122
            }
        }
    }
}
let one = 1
let two = 3

// line comment
// line comment 2
// 33
//
//

let s = "tring"
let str = "ing"
let st = "ring"

post `${env("b_url")}/asdf` {
    header "Content-Type" "application/json"
    // This a line comment
    // And this is another
    body m
}

let l = t
let l = [null, t]
let aa = ["true", true, {
    a: 5
}]
